#
# Copyright (C) 2005, 2006 Mekensleep
#
# Mekensleep
# 24 rue vieille du temple
# 75004 Paris
#       licensing@mekensleep.com
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301, USA.
#
# Authors:
#  Loic Dachary <loic@gnu.org>
#
MAINTAINERCLEANFILES = \
	Makefile.in

EXTRA_DIST = \
	root2window.pl \
	svg2gtk.py \
	pygtk.py \
	interface/mockup.svg

pkgdatadir=@pkgdatadir@

poker2ddir = ${pkgdatadir}/poker2d
nobase_dist_poker2d_DATA = \
	sounds/timeout_notice.wav \
	sounds/self_in_position.wav \
	sounds/timeout_warning.wav \
	interface/pixmaps/poker2D_16.png \
	interface/pixmaps/cards/small-2c.png \
	interface/pixmaps/cards/small-2d.png \
	interface/pixmaps/cards/small-2h.png \
	interface/pixmaps/cards/small-2s.png \
	interface/pixmaps/cards/small-3c.png \
	interface/pixmaps/cards/small-3d.png \
	interface/pixmaps/cards/small-3h.png \
	interface/pixmaps/cards/small-3s.png \
	interface/pixmaps/cards/small-4c.png \
	interface/pixmaps/cards/small-4d.png \
	interface/pixmaps/cards/small-4h.png \
	interface/pixmaps/cards/small-4s.png \
	interface/pixmaps/cards/small-5c.png \
	interface/pixmaps/cards/small-5d.png \
	interface/pixmaps/cards/small-5h.png \
	interface/pixmaps/cards/small-5s.png \
	interface/pixmaps/cards/small-6c.png \
	interface/pixmaps/cards/small-6d.png \
	interface/pixmaps/cards/small-6h.png \
	interface/pixmaps/cards/small-6s.png \
	interface/pixmaps/cards/small-7c.png \
	interface/pixmaps/cards/small-7d.png \
	interface/pixmaps/cards/small-7h.png \
	interface/pixmaps/cards/small-7s.png \
	interface/pixmaps/cards/small-8c.png \
	interface/pixmaps/cards/small-8d.png \
	interface/pixmaps/cards/small-8h.png \
	interface/pixmaps/cards/small-8s.png \
	interface/pixmaps/cards/small-9c.png \
	interface/pixmaps/cards/small-9d.png \
	interface/pixmaps/cards/small-9h.png \
	interface/pixmaps/cards/small-9s.png \
	interface/pixmaps/cards/small-Ac.png \
	interface/pixmaps/cards/small-Ad.png \
	interface/pixmaps/cards/small-Ah.png \
	interface/pixmaps/cards/small-As.png \
	interface/pixmaps/cards/small-Jc.png \
	interface/pixmaps/cards/small-Jd.png \
	interface/pixmaps/cards/small-Jh.png \
	interface/pixmaps/cards/small-Js.png \
	interface/pixmaps/cards/small-Kc.png \
	interface/pixmaps/cards/small-Kd.png \
	interface/pixmaps/cards/small-Kh.png \
	interface/pixmaps/cards/small-Ks.png \
	interface/pixmaps/cards/small-Qc.png \
	interface/pixmaps/cards/small-Qd.png \
	interface/pixmaps/cards/small-Qh.png \
	interface/pixmaps/cards/small-Qs.png \
	interface/pixmaps/cards/small-Tc.png \
	interface/pixmaps/cards/small-Td.png \
	interface/pixmaps/cards/small-Th.png \
	interface/pixmaps/cards/small-Ts.png \
	interface/pixmaps/cards/small-back.png \
	interface/interface2d.glade \
	interface/interface.glade \
	interface/interface.gladep \
	interface/mockup.glade \
	interface/gtkrc \
	interface/winner.png \
	interface/name.png \
	interface/money.png \
	interface/bet.png \
	interface/call.png \
	interface/card_back.png \
	interface/check.png \
	interface/dealer.png \
	interface/exit.png \
	interface/fold.png \
	interface/get_seat.png \
	interface/player_active.png \
	interface/player.png \
	interface/pot.png \
	interface/raise.png \
	interface/raise_slider_dock.png \
	interface/raise_slider.png \
	interface/rebuy.png \
	interface/table1_active.png \
	interface/table1_normal.png \
	interface/table2_active.png \
	interface/table2_normal.png \
	interface/table3_active.png \
	interface/table3_normal.png \
	interface/table4_active.png \
	interface/table4_normal.png \
	interface/table5_active.png \
	interface/table5_normal.png \
	interface/table_background.png \
	interface/table.png \
	interface/tables_dock.png
	Aero/gtkrc \
	Aero/tooltip.png \
	Aero/handle.png \
	Aero/bg.png \
	Aero/shadow.png \
	Aero/shadow-gap.png \
	Aero/shadow-gap-top.png \
	Aero/arrow-up-i.png \
	Aero/arrow-up.png \
	Aero/arrow-down-i.png \
	Aero/arrow-down.png \
	Aero/arrow-left-i.png \
	Aero/arrow-left.png \
	Aero/arrow-right-i.png \
	Aero/arrow-right.png \
	Aero/radio-n.png \
	Aero/button-in.png \
	Aero/ruler.png \
	Aero/button-in-pre.png \
	Aero/button-out.png \
	Aero/radio-s.png \
	Aero/check-n.png \
	Aero/check-s.png \
	Aero/shadow-menu.png \
	Aero/button-out-pre.png \
	Aero/progressbar.png \
	Aero/trans.png \
	Aero/light.png \
	Aero/shadow-notebook-top.png \
	Aero/shadow-notebook-bottom.png \
	Aero/shadow-notebook-right.png \
	Aero/shadow-notebook-left.png \
	Aero/button-default.png \
	Aero/ext-bottom.png \
	Aero/ext-top.png \
	Aero/ext-left.png \
	Aero/ext-right.png \
	Aero/ext-bottom-active.png \
	Aero/ext-top-active.png \
	Aero/slider.png \
	Aero/entry-normal.png \
	Aero/slider-h-pre.png \
	Aero/slider-v-pre.png \
	Aero/spinbutton-up.png \
	Aero/spinbutton-down.png \
	Aero/entry-insensitive.png \
	Aero/line.png \
	Aero/line-v.png \
	Aero/line-h.png \
	Aero/box.png \
	Aero/trough.png \
	Aero/grip-v.png \
	Aero/grip-h.png \
	Aero/handle-pre.png \
	Aero/progress-trough.png \
	Aero/icons/48x48/gtk_stock_add.png \
	Aero/icons/48x48/gtk_stock_apply.png \
	Aero/icons/48x48/gtk_stock_cancel.png \
	Aero/icons/48x48/gtk_stock_close.png \
	Aero/icons/48x48/gtk_stock_remove.png \
	Aero/icons/48x48/gtk_stock_go_back.png \
	Aero/icons/48x48/gtk_stock_go_up.png \
	Aero/icons/48x48/gtk_stock_go_forward.png \
	Aero/icons/48x48/gtk_stock_go_down.png \
	Aero/icons/48x48/gtk_stock_goto_last.png \
	Aero/icons/48x48/gtk_stock_cut.png \
	Aero/icons/48x48/gtk_stock_goto_top.png \
	Aero/icons/48x48/gtk_stock_redo.png \
	Aero/icons/48x48/gtk_stock_goto_first.png \
	Aero/icons/48x48/gtk_stock_goto_bottom.png \
	Aero/icons/48x48/gtk_stock_spell_check.png \
	Aero/icons/48x48/gtk_stock_sort_ascending.png \
	Aero/icons/48x48/gtk_stock_sort_descending.png \
	Aero/icons/48x48/gtk_stock_undo.png \
	Aero/icons/48x48/gtk_stock_refresh.png \
	Aero/icons/48x48/gtk_stock_clear.png \
	Aero/icons/48x48/gtk_stock_convert.png \
	Aero/icons/48x48/gtk_stock_home.png \
	Aero/icons/48x48/gtk_stock_execute.png \
	Aero/icons/48x48/gtk_stock_preferences.png \
	Aero/icons/48x48/gtk_stock_bold.png \
	Aero/icons/48x48/gtk_stock_strikethrough.png \
	Aero/icons/48x48/gtk_stock_underline.png \
	Aero/icons/48x48/gtk_stock_italic.png \
	Aero/icons/48x48/gtk_stock_cdrom.png \
	Aero/icons/48x48/gtk_stock_copy.png \
	Aero/icons/48x48/gtk_stock_delete.png \
	Aero/icons/48x48/gtk_stock_find.png \
	Aero/icons/48x48/gtk_stock_floppy.png \
	Aero/icons/48x48/gtk_stock_find_and_replace.png \
	Aero/icons/48x48/gtk_stock_justify_fill.png \
	Aero/icons/48x48/gtk_stock_justify_center.png \
	Aero/icons/48x48/gtk_stock_justify_right.png \
	Aero/icons/48x48/gtk_stock_justify_left.png \
	Aero/icons/48x48/gtk_stock_save.png \
	Aero/icons/48x48/gtk_stock_revert_to_saved.png \
	Aero/icons/48x48/gtk_stock_save_as.png \
	Aero/icons/48x48/gtk_stock_undelete.png \
	Aero/icons/48x48/gtk_stock_no.png \
	Aero/icons/48x48/gtk_stock_yes.png \
	Aero/icons/48x48/gtk_stock_stop.png \
	Aero/icons/48x48/gtk_stock_select_font.png \
	Aero/icons/48x48/gtk_stock_jump_to.png \
	Aero/icons/48x48/gtk_stock_help.png \
	Aero/icons/48x48/gtk_stock_index.png \
	Aero/icons/48x48/gtk_stock_new.png \
	Aero/icons/48x48/gtk_stock_missing_image.png \
	Aero/icons/48x48/gtk_stock_ok.png \
	Aero/icons/48x48/gtk_stock_open.png \
	Aero/icons/48x48/gtk_stock_paste.png \
	Aero/icons/48x48/gtk_stock_properties.png \
	Aero/icons/48x48/gtk_stock_print.png \
	Aero/icons/48x48/gtk_stock_print_preview.png \
	Aero/icons/48x48/gtk_stock_quit.png \
	Aero/icons/48x48/gtk_stock_select_color.png \
	Aero/icons/48x48/gtk_stock_dnd.png \
	Aero/icons/16x16/gtk_stock_revert_to_saved.png \
	Aero/icons/16x16/gtk_stock_save_as.png \
	Aero/icons/16x16/gtk_stock_undelete.png \
	Aero/icons/16x16/gtk_stock_stop.png \
	Aero/icons/16x16/gtk_stock_index.png \
	Aero/icons/16x16/gtk_stock_new.png \
	Aero/icons/16x16/gtk_stock_missing_image.png \
	Aero/icons/16x16/gtk_stock_open.png \
	Aero/icons/16x16/gtk_stock_properties.png \
	Aero/icons/16x16/gtk_stock_print.png \
	Aero/icons/16x16/gtk_stock_print_preview.png \
	Aero/shadow-evolution.png \
	Aero/README \
	Aero/NEWS \
	Aero/ext-left-active.png \
	Aero/ext-right-active.png \
	fonts/FreeSerif.ttf

all-local: interface/interface2d.glade

interface/interface2d.glade: interface/interface.glade
	mkdir -p interface
	@PERL@ ${srcdir}/root2window.pl < ${srcdir}/interface/interface.glade > interface/interface2d.glade
interface/mockup.glade:
	cat ${srcdir}/interface/mockup.svg | @PYTHON@ ${srcdir}/svg2gtk.py --glade > interface/mockup.glade
interface/gtkrc:
	cat ${srcdir}/interface/mockup.svg | @PYTHON@ ${srcdir}/svg2gtk.py --gtkrc > interface/gtkrc

clean-local:
	rm -f interface/interface2d.glade
