#
# Copyright (C) 2005, 2006 Mekensleep <licensing@mekensleep.com>
#                          24 rue vieille du temple, 75004 Paris
#
# This software's license gives you freedom; you can copy, convey,
# propogate, redistribute and/or modify this program under the terms of
# the GNU Affero General Public License (AGPL) as published by the Free
# Software Foundation (FSF), either version 3 of the License, or (at your
# option) any later version of the AGPL published by the FSF.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Affero
# General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program in a file in the toplevel directory called
# "AGPLv3".  If not, see <http://www.gnu.org/licenses/>.
#
# Authors:
#  Loic Dachary <loic@gnu.org>
#
MAINTAINERCLEANFILES = \
	Makefile.in

EXTRA_DIST = \
	root2window.pl \
	svg2gtk.py \
	pygtk.py \
	interface/table/mockup.svg

pkgdatadir=@pkgdatadir@

poker2ddir = ${pkgdatadir}/poker2d
nobase_dist_poker2d_DATA = \
	sounds/timeout_notice.wav \
	sounds/self_in_position.wav \
	sounds/timeout_warning.wav \
	interface/pixmaps/poker2D_16.png \
	interface/table/cards/small-2c.png \
	interface/table/cards/small-2d.png \
	interface/table/cards/small-2h.png \
	interface/table/cards/small-2s.png \
	interface/table/cards/small-3c.png \
	interface/table/cards/small-3d.png \
	interface/table/cards/small-3h.png \
	interface/table/cards/small-3s.png \
	interface/table/cards/small-4c.png \
	interface/table/cards/small-4d.png \
	interface/table/cards/small-4h.png \
	interface/table/cards/small-4s.png \
	interface/table/cards/small-5c.png \
	interface/table/cards/small-5d.png \
	interface/table/cards/small-5h.png \
	interface/table/cards/small-5s.png \
	interface/table/cards/small-6c.png \
	interface/table/cards/small-6d.png \
	interface/table/cards/small-6h.png \
	interface/table/cards/small-6s.png \
	interface/table/cards/small-7c.png \
	interface/table/cards/small-7d.png \
	interface/table/cards/small-7h.png \
	interface/table/cards/small-7s.png \
	interface/table/cards/small-8c.png \
	interface/table/cards/small-8d.png \
	interface/table/cards/small-8h.png \
	interface/table/cards/small-8s.png \
	interface/table/cards/small-9c.png \
	interface/table/cards/small-9d.png \
	interface/table/cards/small-9h.png \
	interface/table/cards/small-9s.png \
	interface/table/cards/small-Ac.png \
	interface/table/cards/small-Ad.png \
	interface/table/cards/small-Ah.png \
	interface/table/cards/small-As.png \
	interface/table/cards/small-Jc.png \
	interface/table/cards/small-Jd.png \
	interface/table/cards/small-Jh.png \
	interface/table/cards/small-Js.png \
	interface/table/cards/small-Kc.png \
	interface/table/cards/small-Kd.png \
	interface/table/cards/small-Kh.png \
	interface/table/cards/small-Ks.png \
	interface/table/cards/small-Qc.png \
	interface/table/cards/small-Qd.png \
	interface/table/cards/small-Qh.png \
	interface/table/cards/small-Qs.png \
	interface/table/cards/small-Tc.png \
	interface/table/cards/small-Td.png \
	interface/table/cards/small-Th.png \
	interface/table/cards/small-Ts.png \
	interface/table/cards/small-back.png \
	interface/interface2d.glade \
	interface/interface.glade \
	interface/interface.gladep \
	interface/table/mockup.glade \
	interface/table/gtkrc \
	interface/table/gtkrc.mockup \
	interface/table/status.png \
	interface/table/winner.png \
	interface/table/name.png \
	interface/table/money.png \
	interface/table/bet.png \
	interface/table/call.png \
	interface/table/card_back.png \
	interface/table/check.png \
	interface/table/dealer.png \
	interface/table/exit.png \
	interface/table/fold.png \
	interface/table/get_seat.png \
	interface/table/player_active.png \
	interface/table/player.png \
	interface/table/pot.png \
	interface/table/raise.png \
	interface/table/raise_slider_dock.png \
	interface/table/raise_slider.png \
	interface/table/rebuy.png \
	interface/table/table1_active.png \
	interface/table/table1_normal.png \
	interface/table/table2_active.png \
	interface/table/table2_normal.png \
	interface/table/table3_active.png \
	interface/table/table3_normal.png \
	interface/table/table4_active.png \
	interface/table/table4_normal.png \
	interface/table/table5_active.png \
	interface/table/table5_normal.png \
	interface/table/table_background.png \
	interface/table/table.png \
	interface/table/tables_dock.png \
	Aero/gtkrc \
	Aero/tooltip.png \
	Aero/handle.png \
	Aero/bg.png \
	Aero/shadow.png \
	Aero/shadow-gap.png \
	Aero/shadow-gap-top.png \
	Aero/arrow-up-i.png \
	Aero/arrow-up.png \
	Aero/arrow-down-i.png \
	Aero/arrow-down.png \
	Aero/arrow-left-i.png \
	Aero/arrow-left.png \
	Aero/arrow-right-i.png \
	Aero/arrow-right.png \
	Aero/radio-n.png \
	Aero/button-in.png \
	Aero/ruler.png \
	Aero/button-in-pre.png \
	Aero/button-out.png \
	Aero/radio-s.png \
	Aero/check-n.png \
	Aero/check-s.png \
	Aero/shadow-menu.png \
	Aero/button-out-pre.png \
	Aero/progressbar.png \
	Aero/trans.png \
	Aero/light.png \
	Aero/shadow-notebook-top.png \
	Aero/shadow-notebook-bottom.png \
	Aero/shadow-notebook-right.png \
	Aero/shadow-notebook-left.png \
	Aero/button-default.png \
	Aero/ext-bottom.png \
	Aero/ext-top.png \
	Aero/ext-left.png \
	Aero/ext-right.png \
	Aero/ext-bottom-active.png \
	Aero/ext-top-active.png \
	Aero/slider.png \
	Aero/entry-normal.png \
	Aero/slider-h-pre.png \
	Aero/slider-v-pre.png \
	Aero/spinbutton-up.png \
	Aero/spinbutton-down.png \
	Aero/entry-insensitive.png \
	Aero/line.png \
	Aero/line-v.png \
	Aero/line-h.png \
	Aero/box.png \
	Aero/trough.png \
	Aero/grip-v.png \
	Aero/grip-h.png \
	Aero/handle-pre.png \
	Aero/progress-trough.png \
	Aero/icons/48x48/gtk_stock_add.png \
	Aero/icons/48x48/gtk_stock_apply.png \
	Aero/icons/48x48/gtk_stock_cancel.png \
	Aero/icons/48x48/gtk_stock_close.png \
	Aero/icons/48x48/gtk_stock_remove.png \
	Aero/icons/48x48/gtk_stock_go_back.png \
	Aero/icons/48x48/gtk_stock_go_up.png \
	Aero/icons/48x48/gtk_stock_go_forward.png \
	Aero/icons/48x48/gtk_stock_go_down.png \
	Aero/icons/48x48/gtk_stock_goto_last.png \
	Aero/icons/48x48/gtk_stock_cut.png \
	Aero/icons/48x48/gtk_stock_goto_top.png \
	Aero/icons/48x48/gtk_stock_redo.png \
	Aero/icons/48x48/gtk_stock_goto_first.png \
	Aero/icons/48x48/gtk_stock_goto_bottom.png \
	Aero/icons/48x48/gtk_stock_spell_check.png \
	Aero/icons/48x48/gtk_stock_sort_ascending.png \
	Aero/icons/48x48/gtk_stock_sort_descending.png \
	Aero/icons/48x48/gtk_stock_undo.png \
	Aero/icons/48x48/gtk_stock_refresh.png \
	Aero/icons/48x48/gtk_stock_clear.png \
	Aero/icons/48x48/gtk_stock_convert.png \
	Aero/icons/48x48/gtk_stock_home.png \
	Aero/icons/48x48/gtk_stock_execute.png \
	Aero/icons/48x48/gtk_stock_preferences.png \
	Aero/icons/48x48/gtk_stock_bold.png \
	Aero/icons/48x48/gtk_stock_strikethrough.png \
	Aero/icons/48x48/gtk_stock_underline.png \
	Aero/icons/48x48/gtk_stock_italic.png \
	Aero/icons/48x48/gtk_stock_cdrom.png \
	Aero/icons/48x48/gtk_stock_copy.png \
	Aero/icons/48x48/gtk_stock_delete.png \
	Aero/icons/48x48/gtk_stock_find.png \
	Aero/icons/48x48/gtk_stock_floppy.png \
	Aero/icons/48x48/gtk_stock_find_and_replace.png \
	Aero/icons/48x48/gtk_stock_justify_fill.png \
	Aero/icons/48x48/gtk_stock_justify_center.png \
	Aero/icons/48x48/gtk_stock_justify_right.png \
	Aero/icons/48x48/gtk_stock_justify_left.png \
	Aero/icons/48x48/gtk_stock_save.png \
	Aero/icons/48x48/gtk_stock_revert_to_saved.png \
	Aero/icons/48x48/gtk_stock_save_as.png \
	Aero/icons/48x48/gtk_stock_undelete.png \
	Aero/icons/48x48/gtk_stock_no.png \
	Aero/icons/48x48/gtk_stock_yes.png \
	Aero/icons/48x48/gtk_stock_stop.png \
	Aero/icons/48x48/gtk_stock_select_font.png \
	Aero/icons/48x48/gtk_stock_jump_to.png \
	Aero/icons/48x48/gtk_stock_help.png \
	Aero/icons/48x48/gtk_stock_index.png \
	Aero/icons/48x48/gtk_stock_new.png \
	Aero/icons/48x48/gtk_stock_missing_image.png \
	Aero/icons/48x48/gtk_stock_ok.png \
	Aero/icons/48x48/gtk_stock_open.png \
	Aero/icons/48x48/gtk_stock_paste.png \
	Aero/icons/48x48/gtk_stock_properties.png \
	Aero/icons/48x48/gtk_stock_print.png \
	Aero/icons/48x48/gtk_stock_print_preview.png \
	Aero/icons/48x48/gtk_stock_quit.png \
	Aero/icons/48x48/gtk_stock_select_color.png \
	Aero/icons/48x48/gtk_stock_dnd.png \
	Aero/icons/16x16/gtk_stock_revert_to_saved.png \
	Aero/icons/16x16/gtk_stock_save_as.png \
	Aero/icons/16x16/gtk_stock_undelete.png \
	Aero/icons/16x16/gtk_stock_stop.png \
	Aero/icons/16x16/gtk_stock_index.png \
	Aero/icons/16x16/gtk_stock_new.png \
	Aero/icons/16x16/gtk_stock_missing_image.png \
	Aero/icons/16x16/gtk_stock_open.png \
	Aero/icons/16x16/gtk_stock_properties.png \
	Aero/icons/16x16/gtk_stock_print.png \
	Aero/icons/16x16/gtk_stock_print_preview.png \
	Aero/shadow-evolution.png \
	Aero/README \
	Aero/NEWS \
	Aero/ext-left-active.png \
	Aero/ext-right-active.png \
	fonts/FreeSerif.ttf

all-local: interface/interface2d.glade

interface/interface2d.glade: interface/interface.glade
	mkdir -p interface
	@PERL@ ${srcdir}/root2window.pl < ${srcdir}/interface/interface.glade > interface/interface2d.glade
interface/table/mockup.glade: interface/table/mockup.svg svg2gtk.py
	cat ${srcdir}/interface/table/mockup.svg | @PYTHON@ ${srcdir}/svg2gtk.py --glade > interface/table/mockup.glade
interface/table/gtkrc.mockup: interface/table/mockup.svg svg2gtk.py
	cat ${srcdir}/interface/table/mockup.svg | @PYTHON@ ${srcdir}/svg2gtk.py --gtkrc > interface/table/gtkrc.mockup

clean-local:
	rm -f interface/interface2d.glade interface/table/mockup.glade interface/table/gtkrc.mockup
